--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
     </style>
 </head>
 
-<body><script>
-with(document)with(body)with(insertBefore(createElement("script"),firstChild))setAttribute("exparams","category=&userid=&aplus&yunid=&&trid=ac11000117189645979435894e2622&asid=AQAAAAB2UXVmsuIIfQAAAACE4iFEXZobTA==",id="tb-beacon-aplus",src=(location>"https"?"//g":"//g")+".alicdn.com/alilog/mlog/aplus_v2.js")
-</script>
-<script>
-with(document)with(body)with(insertBefore(createElement("script"),firstChild))setAttribute("exparams","category=&userid=&aplus&yunid=&&trid=ac11000117189459198037207e5d29&asid=AQAAAAB/CHVm+nWNXgAAAAAcdtJgXF2z0Q==",id="tb-beacon-aplus",src=(location>"https"?"//g":"//g")+".alicdn.com/alilog/mlog/aplus_v2.js")
-</script>
-<script>
-with(document)with(body)with(insertBefore(createElement("script"),firstChild))setAttribute("exparams","category=&userid=&aplus&yunid=&&trid=ac11000117171419541565268e89c7&asid=AQAAAADCgVlm9J8WJQAAAABt31tb6R/2qw==",id="tb-beacon-aplus",src=(location>"https"?"//g":"//g")+".alicdn.com/alilog/mlog/aplus_v2.js")
-</script>
+<body>
 
 
     <div id="app">
